# django_app_docker_gunicorn_nginx_ssl

./: .env_example  .gitignore  Dockerfile  MYREADME.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
nginx/: nginx.conf
shop/: settings.py
