[tool.poetry]
name = "django-app-docker-gunicorn-nginx-ssl"
version = "0.1.0"
description = ""
authors = ["Roman <maks3564195@gmail.com>"]
readme = "README.md"
packages = [{include = "django_app_docker_gunicorn_nginx_ssl"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
